--- a/PokemonShowdown/app/src/main/res/values/strings.xml
+++ b/PokemonShowdown/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PokemonShowdown</string>
+    <string name="logo_de_pokemon">Logo de pokemon</string>
+    <string name="pokeball">Pokeball</string>
+    <string name="portada">Pantalla dividida en blanco y rojo</string>
+    <string name="showdown_logo">logo con texto Showdown</string>
 </resources>
