--- a/PokemonShowdown/app/src/main/res/values/strings.xml
+++ b/PokemonShowdown/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="pokemon_1">pokemon 1</string>
     <string name="slashbar">/</string>
     <string name="level">Nv. 50</string>
+    <string name="atk1">At1</string>
+    <string name="atk2">At2</string>
+    <string name="atk3">At3</string>
+    <string name="atk4">At4</string>
+
 </resources>
