--- a/PokemonShowdown/app/src/main/res/values/strings.xml
+++ b/PokemonShowdown/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="slashbar">/</string>
     <string name="level">Nv. 50</string>
     <string name="atk1">At1</string>
-    <string name="atk2">At2</string>
+    -<string name="atk2">At2</string>*-
     <string name="atk3">At3</string>
     <string name="atk4">At4</string>
 
