--- a/PokemonShowdown/app/src/main/res/values/strings.xml
+++ b/PokemonShowdown/app/src/main/res/values/strings.xml
@@ -38,5 +38,14 @@
     <string name="escudo_a_modo_de_defensa">escudo a modo de defensa</string>
     <string name="zapatillas_a_modo_de_velocidad">zapatillas a modo de velocidad</string>
     <string name="type2">Segundo tipo de un pokemon</string>
+    <string name="title_activity_battle">Battle</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 </resources>
