--- a/PokemonShowdown/app/src/main/res/values/strings.xml
+++ b/PokemonShowdown/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="type_of_move">Movimiento de estado o de ataque</string>
+    <string name="pantallafinal">Pantalla final que muestra el resultado</string>
 
 
 </resources>
